force-app/main/default/objects/Recruit_Question__c/Recruit_Question__c.object-meta.xml
<CustomObject>
    <label>Recruit Question</label>
    <nameField>
        <label>Recruit Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruit Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>