force-app/main/default/objects/Recruit_Question__c/fields/Answer_Score__c.field-meta.xml
<CustomField>
    <fullName>Answer_Score__c</fullName>
    <label>Answer Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>