force-app/main/default/objects/Recruit_Question__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Recruit Questions</relationshipLabel>
    <relationshipName>Recruit_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>