force-app/main/default/objects/Recruit_Question__c/fields/Recruit__c.field-meta.xml
<CustomField>
    <fullName>Recruit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruit</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Recruit Questions</relationshipLabel>
    <relationshipName>Recruit_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>