force-app/main/default/objects/Recruit_Question__c/fields/Recruit_Answer__c.field-meta.xml
<CustomField>
    <fullName>Recruit_Answer__c</fullName>
    <label>Recruit Answer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>