force-app/main/default/objects/Recruit_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Recruit__c</columns>
    <columns>Applicant__c</columns>
    <columns>NAME</columns>
    <columns>Recruit_Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>